# voicecall-design

./: .env.example  .gitignore  pyproject.toml
deploy/: Caddyfile  turnserver.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  AudioRecorderPanel.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: dialog.tsx  dropdown-menu.tsx  tabs.tsx
frontend/src/hooks/: useAudioRecorder.ts  useSessionRefresh.ts  useVoiceCall.ts
frontend/src/lib/: api.ts  previewMock.ts  wav.ts  wavMerge.ts
frontend/src/pages/: AdminPage.tsx  BroadcastPage.tsx  CallPage.tsx  LoginPage.tsx  VoicesPage.tsx
frontend/src/stores/: auth.ts
scripts/: create_user.py
src/: config.py  main.py  rate_limit.py
src/api/: admin.py  auth.py  call.py  me.py  text_broadcast.py  turn.py  voices.py
src/models/: database.py  tables.py
src/pipeline/: session.py
src/services/: pipecat_tts.py  tts_engine.py  voice_service.py
src/utils/: audio.py
src/webrtc/: audio_track.py
